--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@prakhartandon_org/logm",
-  "version": "0.0.4",
-  "description": "Logging & Monitoring for Plugin Environments",
+  "version": "0.0.5",
+  "description": "Logging & Monitoring for Plugin Environments, where console.logs aren't displayed with complete context.",
   "main": "./lib/index.js",
   "types": "dist/index.d.ts",
   "files": [
@@ -26,7 +26,10 @@
   },
   "keywords": [
     "log",
-    "monitor"
+    "monitor",
+    "plugin",
+    "figma plugin",
+    "extension"
   ],
   "homepage": "https://github.com/prakhart111",
   "devDependencies": {
