getBatchSize & readme update

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@prakhartandon_org/logm",
-  "version": "0.0.9",
-  "description": "Logging & Monitoring for Plugin Environments, where console.logs aren't displayed with complete context. Also supports sending logs to any server.",
+  "version": "0.1.1",
+  "description": "Logging & Monitoring for Plugin Environments, where console.logs aren't displayed with complete context. Also supports sending logs to any server (now with batching).",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "files": [
